--- a/NASA APIs/Storyboards/Base.lproj/LaunchScreen.storyboard
+++ b/NASA APIs/Storyboards/Base.lproj/LaunchScreen.storyboard
@@ -17,13 +17,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchScreen" translatesAutoresizingMaskIntoConstraints="NO" id="dDG-pA-9SV">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <rect key="frame" x="0.0" y="-2" width="414" height="898"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="dDG-pA-9SV" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="H2e-EH-aOO"/>
+                            <constraint firstItem="dDG-pA-9SV" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" constant="-2" id="H2e-EH-aOO"/>
                             <constraint firstAttribute="bottom" secondItem="dDG-pA-9SV" secondAttribute="bottom" id="XeY-QB-iCB"/>
                             <constraint firstItem="dDG-pA-9SV" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="exL-zy-C5D"/>
                             <constraint firstItem="dDG-pA-9SV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="kEV-eh-gkJ"/>
