--- a/NASA APIs/Objects/UIElements/Cells & Headers/TagsCell.xib
+++ b/NASA APIs/Objects/UIElements/Cells & Headers/TagsCell.xib
@@ -5,49 +5,36 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TagsCell" customModule="NASA_APIs" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="TagsCell" id="gTV-IL-0wX" customClass="TagsCell" customModule="NASA_APIs" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="100" height="50"/>
+            <rect key="frame" x="0.0" y="0.0" width="586" height="50"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="100" height="50"/>
+                <rect key="frame" x="0.0" y="0.0" width="586" height="50"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bRK-2q-W5R">
-                        <rect key="frame" x="30" y="5" width="40" height="40"/>
-                        <color key="backgroundColor" systemColor="systemYellowColor"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="40" id="yQZ-vF-gky"/>
-                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="40" id="zid-nv-xQh"/>
-                        </constraints>
-                        <state key="normal" title="Button"/>
-                        <buttonConfiguration key="configuration" style="plain"/>
-                        <connections>
-                            <action selector="touch:" destination="gTV-IL-0wX" eventType="touchUpInside" id="yTs-Pa-KsJ"/>
-                        </connections>
-                    </button>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gBe-oN-ZmY">
+                        <rect key="frame" x="272.33333333333331" y="14.999999999999998" width="41.333333333333314" height="20.333333333333329"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstItem="bRK-2q-W5R" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="Bhc-cK-vQG"/>
-                <constraint firstItem="bRK-2q-W5R" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="zUq-D8-phR"/>
+                <constraint firstItem="gBe-oN-ZmY" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="Db5-sL-Hcs"/>
+                <constraint firstItem="gBe-oN-ZmY" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="lAK-uT-udD"/>
             </constraints>
-            <size key="customSize" width="428" height="54"/>
+            <size key="customSize" width="914" height="54"/>
             <connections>
-                <outlet property="button" destination="bRK-2q-W5R" id="ice-WT-9lN"/>
+                <outlet property="label" destination="gBe-oN-ZmY" id="VYE-8K-GCf"/>
             </connections>
-            <point key="canvasLocation" x="334.61538461538458" y="0.0"/>
+            <point key="canvasLocation" x="512.30769230769226" y="0.0"/>
         </collectionViewCell>
     </objects>
-    <resources>
-        <systemColor name="systemYellowColor">
-            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-    </resources>
 </document>
