--- a/NASA APIs/Objects/UIElements/Cells & Headers/ImageCell.xib
+++ b/NASA APIs/Objects/UIElements/Cells & Headers/ImageCell.xib
@@ -1,56 +1,168 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_0" orientation="portrait" appearance="light"/>
+    <device id="retina6_0" orientation="portrait" appearance="dark"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
-        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ImageCell" rowHeight="850" id="KGk-i7-Jjw" customClass="ImageCell" customModule="NASA_APIs">
-            <rect key="frame" x="0.0" y="0.0" width="400" height="500"/>
-            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM" customClass="ImageCell" customModule="NASA_APIs" customModuleProvider="target">
-                <rect key="frame" x="0.0" y="0.0" width="400" height="500"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ImageCell" rowHeight="425" id="KGk-i7-Jjw" customClass="ImageCell" customModule="NASA_APIs" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="425"/>
+            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+                <rect key="frame" x="0.0" y="0.0" width="320" height="425"/>
                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="MKo-wy-2LK">
-                        <rect key="frame" x="5" y="5" width="390" height="490"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8Hg-RB-GQF" userLabel="ImageView">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="320"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="320" id="3od-76-cwZ"/>
+                            <constraint firstAttribute="width" constant="320" id="GyB-Ll-iGV"/>
+                            <constraint firstAttribute="width" secondItem="8Hg-RB-GQF" secondAttribute="height" multiplier="1:1" id="Uuf-Ks-Zbs"/>
+                        </constraints>
+                    </imageView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CkF-eE-jQE" userLabel="DescriptionView">
+                        <rect key="frame" x="0.0" y="320" width="320" height="50"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="testImage" translatesAutoresizingMaskIntoConstraints="NO" id="jIs-ca-VSx">
-                                <rect key="frame" x="0.0" y="11" width="390" height="372"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="A Moon landing" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" minimumScaleFactor="0.69999999999999996" translatesAutoresizingMaskIntoConstraints="NO" id="djf-nn-Cve">
-                                <rect key="frame" x="10" y="406" width="372" height="67"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <fontDescription key="fontDescription" type="system" weight="thin" pointSize="15"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" showsExpansionTextWhenTruncated="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Yo-Va-eej">
+                                <rect key="frame" x="50" y="5" width="220" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="vij-Bb-Ea5"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jmn-tm-R0W">
+                                <rect key="frame" x="246" y="24" width="70" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="Vkc-1h-eBA"/>
+                                    <constraint firstAttribute="width" constant="70" id="psK-iV-aLK"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="...more">
+                                    <fontDescription key="titleFontDescription" type="system" pointSize="0.0"/>
+                                    <color key="baseForegroundColor" systemColor="systemGray2Color"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="testAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="F6V-fJ-ZMf"/>
+                                </connections>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="square.fill.text.grid.1x2" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="ob4-lw-wm3" userLabel="textIcon">
+                                <rect key="frame" x="15" y="15.333333333333336" width="24" height="19.999999999999993"/>
+                                <color key="tintColor" systemColor="systemGray2Color"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="24" id="anL-YX-MLw"/>
+                                    <constraint firstAttribute="width" constant="24" id="ku2-NQ-NiF"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
-                        <color key="backgroundColor" name="AccentColor"/>
+                        <color key="backgroundColor" systemColor="systemGray6Color"/>
+                        <constraints>
+                            <constraint firstItem="6Yo-Va-eej" firstAttribute="leading" secondItem="CkF-eE-jQE" secondAttribute="leading" constant="50" id="2gi-4L-uME"/>
+                            <constraint firstAttribute="bottom" secondItem="jmn-tm-R0W" secondAttribute="bottom" constant="6" id="3L2-GT-dZK"/>
+                            <constraint firstItem="ob4-lw-wm3" firstAttribute="top" secondItem="CkF-eE-jQE" secondAttribute="top" constant="13" id="Ceb-UD-VAM"/>
+                            <constraint firstItem="ob4-lw-wm3" firstAttribute="leading" secondItem="CkF-eE-jQE" secondAttribute="leading" constant="15" id="QQR-oz-CQO"/>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="Y1O-za-u8Y"/>
+                            <constraint firstAttribute="trailing" secondItem="jmn-tm-R0W" secondAttribute="trailing" constant="4" id="flI-iC-TYj"/>
+                            <constraint firstItem="6Yo-Va-eej" firstAttribute="top" secondItem="CkF-eE-jQE" secondAttribute="top" constant="5" id="hRC-Vc-BsO"/>
+                            <constraint firstAttribute="bottom" secondItem="6Yo-Va-eej" secondAttribute="bottom" constant="5" id="ocj-U3-Yuj"/>
+                            <constraint firstAttribute="trailing" secondItem="6Yo-Va-eej" secondAttribute="trailing" constant="50" id="sPr-2I-rbs"/>
+                        </constraints>
                     </view>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JC9-bP-Wwo" userLabel="ButtonsView">
+                        <rect key="frame" x="0.0" y="370" width="320" height="50"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tg7-h9-0C1">
+                                <rect key="frame" x="267" y="6" width="38" height="38"/>
+                                <color key="backgroundColor" systemColor="systemGray4Color"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="38" id="F1R-aB-cdF"/>
+                                    <constraint firstAttribute="height" constant="38" id="Uja-ba-Fq5"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="magnifyingglass" catalog="system">
+                                    <color key="baseForegroundColor" systemColor="labelColor"/>
+                                </buttonConfiguration>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j3e-Uc-kkL">
+                                <rect key="frame" x="223" y="6" width="38" height="38"/>
+                                <color key="backgroundColor" systemColor="systemGray4Color"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="38" id="AMi-Cj-tDP"/>
+                                    <constraint firstAttribute="width" constant="38" id="mFu-ug-csn"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="plus" catalog="system">
+                                    <color key="baseForegroundColor" systemColor="labelColor"/>
+                                </buttonConfiguration>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemGray6Color"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="j3e-Uc-kkL" secondAttribute="bottom" constant="6" id="0wA-Ed-mnn"/>
+                            <constraint firstItem="Tg7-h9-0C1" firstAttribute="top" secondItem="JC9-bP-Wwo" secondAttribute="top" constant="6" id="L1Q-G8-U0h"/>
+                            <constraint firstAttribute="bottom" secondItem="Tg7-h9-0C1" secondAttribute="bottom" constant="6" id="XPh-kQ-4YU"/>
+                            <constraint firstItem="j3e-Uc-kkL" firstAttribute="top" secondItem="JC9-bP-Wwo" secondAttribute="top" constant="6" id="Z6u-pt-hcq"/>
+                            <constraint firstItem="Tg7-h9-0C1" firstAttribute="leading" secondItem="j3e-Uc-kkL" secondAttribute="trailing" constant="6" id="gz8-ee-8nf"/>
+                            <constraint firstAttribute="height" constant="50" id="yNu-Nt-VYI"/>
+                            <constraint firstAttribute="trailing" secondItem="Tg7-h9-0C1" secondAttribute="trailing" constant="15" id="zY5-rh-x4Q"/>
+                        </constraints>
+                    </view>
+                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="G9t-Hr-1jl">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="320"/>
+                    </activityIndicatorView>
                 </subviews>
+                <constraints>
+                    <constraint firstItem="CkF-eE-jQE" firstAttribute="top" secondItem="8Hg-RB-GQF" secondAttribute="bottom" id="03z-Fj-jV6"/>
+                    <constraint firstAttribute="bottom" secondItem="JC9-bP-Wwo" secondAttribute="bottom" constant="10" id="1kR-G7-rM1"/>
+                    <constraint firstAttribute="trailing" secondItem="8Hg-RB-GQF" secondAttribute="trailing" id="IRf-Cv-rlE"/>
+                    <constraint firstItem="JC9-bP-Wwo" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="OlB-QP-O6r"/>
+                    <constraint firstItem="8Hg-RB-GQF" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="PEY-P9-IH7"/>
+                    <constraint firstItem="CkF-eE-jQE" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="XNa-fJ-BTv"/>
+                    <constraint firstAttribute="trailing" secondItem="G9t-Hr-1jl" secondAttribute="trailing" id="d3p-v9-Id2"/>
+                    <constraint firstItem="8Hg-RB-GQF" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="dXQ-mZ-lnj"/>
+                    <constraint firstItem="G9t-Hr-1jl" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="jag-Pt-iyT"/>
+                    <constraint firstItem="G9t-Hr-1jl" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="lM9-lv-OWT"/>
+                    <constraint firstAttribute="trailing" secondItem="CkF-eE-jQE" secondAttribute="trailing" id="lwH-xa-qfp"/>
+                    <constraint firstAttribute="trailing" secondItem="JC9-bP-Wwo" secondAttribute="trailing" id="rdj-2n-ndn"/>
+                    <constraint firstItem="JC9-bP-Wwo" firstAttribute="top" secondItem="CkF-eE-jQE" secondAttribute="bottom" id="w38-lT-WFL"/>
+                    <constraint firstItem="CkF-eE-jQE" firstAttribute="top" secondItem="G9t-Hr-1jl" secondAttribute="bottom" id="y8f-98-aj1"/>
+                </constraints>
             </tableViewCellContentView>
-            <viewLayoutGuide key="safeArea" id="oHd-8n-U3H"/>
+            <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="picture" destination="jIs-ca-VSx" id="BUy-x2-5VD"/>
-                <outlet property="pictureDescription" destination="djf-nn-Cve" id="qaM-Su-MG6"/>
-                <outlet property="viewContains" destination="MKo-wy-2LK" id="7xz-Mw-lQL"/>
+                <outlet property="activityIndicatorOutlet" destination="G9t-Hr-1jl" id="0D2-Fy-KWN"/>
+                <outlet property="addButtonOutlet" destination="j3e-Uc-kkL" id="Ir0-z3-VVG"/>
+                <outlet property="buttonsViewOutlet" destination="JC9-bP-Wwo" id="Su3-wg-AKJ"/>
+                <outlet property="deployButtonOutlet" destination="jmn-tm-R0W" id="jAj-Cn-9iX"/>
+                <outlet property="glassSeeButtonOutlet" destination="Tg7-h9-0C1" id="K73-BE-aLW"/>
+                <outlet property="pictureDescription" destination="6Yo-Va-eej" id="lDo-39-eSb"/>
+                <outlet property="pictureOutlet" destination="8Hg-RB-GQF" id="H4E-nt-TcX"/>
             </connections>
-            <point key="canvasLocation" x="12.307692307692307" y="206.1611374407583"/>
+            <point key="canvasLocation" x="83.07692307692308" y="5.3317535545023693"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="testImage" width="1200" height="800"/>
-        <namedColor name="AccentColor">
-            <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
+        <image name="magnifyingglass" catalog="system" width="128" height="117"/>
+        <image name="plus" catalog="system" width="128" height="113"/>
+        <image name="square.fill.text.grid.1x2" catalog="system" width="128" height="99"/>
+        <systemColor name="labelColor">
+            <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGray2Color">
+            <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGray4Color">
+            <color red="0.81960784313725488" green="0.81960784313725488" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGray6Color">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
     </resources>
 </document>
