--- a/NASA APIs/Objects/View & Xib/ImageCell.xib
+++ b/NASA APIs/Objects/View & Xib/ImageCell.xib
@@ -11,11 +11,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ImageCell" rowHeight="425" id="KGk-i7-Jjw" customClass="ImageCell" customModule="NASA_APIs" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="425"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ImageCell" rowHeight="457" id="KGk-i7-Jjw" customClass="ImageCell" customModule="NASA_APIs" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="457"/>
             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="425"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="457"/>
                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8Hg-RB-GQF" userLabel="ImageView">
@@ -62,7 +62,7 @@
                                 </constraints>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemGray6Color"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="6Yo-Va-eej" firstAttribute="leading" secondItem="CkF-eE-jQE" secondAttribute="leading" constant="50" id="2gi-4L-uME"/>
                             <constraint firstAttribute="bottom" secondItem="jmn-tm-R0W" secondAttribute="bottom" constant="6" id="3L2-GT-dZK"/>
@@ -86,7 +86,7 @@
                                     <constraint firstAttribute="height" constant="38" id="Uja-ba-Fq5"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" image="magnifyingglass" catalog="system">
+                                <buttonConfiguration key="configuration" style="plain" image="eyeglasses" catalog="system">
                                     <color key="baseForegroundColor" systemColor="labelColor"/>
                                 </buttonConfiguration>
                             </button>
@@ -103,7 +103,7 @@
                                 </buttonConfiguration>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemGray6Color"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="j3e-Uc-kkL" secondAttribute="bottom" constant="6" id="0wA-Ed-mnn"/>
                             <constraint firstItem="Tg7-h9-0C1" firstAttribute="top" secondItem="JC9-bP-Wwo" secondAttribute="top" constant="6" id="L1Q-G8-U0h"/>
@@ -120,7 +120,7 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="CkF-eE-jQE" firstAttribute="top" secondItem="8Hg-RB-GQF" secondAttribute="bottom" id="03z-Fj-jV6"/>
-                    <constraint firstAttribute="bottom" secondItem="JC9-bP-Wwo" secondAttribute="bottom" constant="10" id="1kR-G7-rM1"/>
+                    <constraint firstAttribute="bottom" secondItem="JC9-bP-Wwo" secondAttribute="bottom" constant="40" id="1kR-G7-rM1"/>
                     <constraint firstAttribute="trailing" secondItem="8Hg-RB-GQF" secondAttribute="trailing" id="IRf-Cv-rlE"/>
                     <constraint firstItem="JC9-bP-Wwo" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="OlB-QP-O6r"/>
                     <constraint firstItem="8Hg-RB-GQF" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="PEY-P9-IH7"/>
@@ -145,24 +145,24 @@
                 <outlet property="pictureDescription" destination="6Yo-Va-eej" id="lDo-39-eSb"/>
                 <outlet property="pictureOutlet" destination="8Hg-RB-GQF" id="H4E-nt-TcX"/>
             </connections>
-            <point key="canvasLocation" x="83.07692307692308" y="5.3317535545023693"/>
+            <point key="canvasLocation" x="83.07692307692308" y="16.706161137440759"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="magnifyingglass" catalog="system" width="128" height="117"/>
+        <image name="eyeglasses" catalog="system" width="128" height="55"/>
         <image name="plus" catalog="system" width="128" height="113"/>
         <image name="square.fill.text.grid.1x2" catalog="system" width="128" height="99"/>
         <systemColor name="labelColor">
             <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemGray2Color">
             <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGray4Color">
             <color red="0.81960784313725488" green="0.81960784313725488" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemGray6Color">
-            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
